# openwhisper-grammar-spelling-server

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  bench.py  com.openwhispr.cleanup-server.plist  docker-compose.yml  mise.toml  requirements.txt  server.py
deployment/: com.openwhispr.cleanup-server.plist
src/: config.rs  handlers.rs  main.rs  pipeline.rs
src/stages/: correction.rs  detect.rs  fillers.rs  grammar.rs  itn.rs  mod.rs  punctuation.rs  translation.rs
