[package]
name = "openwhisper-cleanup-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
regex = "1.11.1"
lazy_static = "1.5.0"
lingua = "1.7.2"
text2num = "2.6.2"
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
ndarray = "0.17.2"
notify = "8.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive", "env"] }
tokenizers = { version = "0.21.0", features = ["http"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
uuid = { version = "1.13.1", features = ["v4", "fast-rng"] }
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
